--- a/_includes/install_instructions/videoconferencing.html
+++ b/_includes/install_instructions/videoconferencing.html
@@ -8,7 +8,7 @@ if you do not use Zoom
 <p>
   If you haven't used Zoom before, go to the
   <a href="https://zoom.us/download">official website</a>
-  to download and install the Zoom client for your computer.
+  to download and install the Zoom client for your computer. If you have installed Zoom before, please make sure you are using the latest version by checking for updates. 
 </p>
 
 
@@ -26,12 +26,7 @@ if you do not use Zoom
     <li><strong>Two monitors:</strong> If you have two monitors,
       plan to have the tool you are learing up on one monitor and
       the video conferencing software on the other.</li>
-    <li><strong>Two devices:</strong> If you don't have two monitors,
-      do you have another device (tablet, smartphone) with a medium to large
-      sized screen? If so, try using the smaller device as your video
-      conference connection and your larger device (laptop or desktop)
-      to follow along with the tool you will be learning about.</li>
-    <li><strong>Divide your screen:</strong> If you only have one device
+      <li><strong>Divide your screen:</strong> If you only have one device
       and one screen, practice having two windows
       (the video conference program and one of the tools you will be using
       at the workshop) open together.
