--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -53,16 +53,20 @@
   </div>
 </div>
 
-<h2>Workshop Goals<h2>
-Unix Shell
-This part of the workshop aims to familiarise you with the basic shell commands and their usage. After completing this workshop you will be able to:
-Understand the fundamental aspects of scientific computing that you will often come across such as file path notations and remote and high performance computing clusters.
-Understand basics of the Bash scripting language, and its utility to record and automate iterative tasks which will allow you to work more efficiently with large numbers of files. 
-Python
+<h2>Workshop Goals</h2>
+<h3>Unix Shell</h3>
+
+This part of the workshop aims to familiarise you with the basic shell commands and their usage. 
+After completing this workshop you will be able to:
+
+* Understand the fundamental aspects of scientific computing that you will often come across such as file path notations and remote and high performance computing clusters.
+
+* Understand basics of the Bash scripting language, and its utility to record and automate iterative tasks which will allow you to work more efficiently with large numbers of files. 
+<h3>Python</h3>
 This part of the workshop will teach you how to use Python to perform data analysis and process automation. You will learn basic Python commands, libraries and programming principles. After completing this workshop you will be able to:
 Write code and run programs using Jupyter notebook, text/code editor or command line, which allows you to create simple plots and evaluate your datasets.
 Understand how well-written and annotated code is a fundamental component of a reproducible research workflow (code produces the same result, same code can be used with other suitable datasets, etc.).
-Git(Hub)
+<h3>Git(Hub)</h3>
 This part of the workshop will teach you how to use version control through basic Git commands to keep track of your code. After completing this workshop you will be able to: 
 Set up a local Git repository and identify changes/versions of this repository.
 Connect your local repository to a remote repository on GitHub to collaborate with others.
